Segundo commit modificando el index y los estilos

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <p>Otro parrafo en html usando git como voy</p>
     <link rel="stylesheet" href="stylesheet.css">
     <img src="gitimagen.JPG">
-
+    
+    <p1>Agregando otro parrafo para el curso de git  </p1>
+    
 </html>
 
